Add fonts and styles

--- a/source/index.html
+++ b/source/index.html
@@ -9,11 +9,25 @@
     <link rel="icon" type="image/ico" sizes="32x32" href="img/favicon_32x32.ico">
     <link rel="icon" href="favicon.ico">
 
-    <link href="css/style.min.css">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <header class="page-header">
+      <nav class="page-header__menu container container--menu">
+        <img class="logo" src="img/logo.png" width="180" height="30" alt="Логотип Cube.Cloud">
 
+        <ul class="menu">
+          <li class="menu__item">
+            <a class="menu__link">Главная</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link">Настройки</a>
+          </li>
+          <li class="menu__item">
+            <a class="menu__link">Подключенные устройства</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main class="page-content">
